..F....... [ZBX-7215] improved the design of the search auto suggest (Pavels)
.....J.... [ZBXNEXT-1776] added support for java.math.BigDecimal, java.math.BigInteger and some other open types (asaveljevs)
..F.I..... [ZBXNEXT-715] increased the size of sysmaps_elements.label and sysmaps_links.label fields to 2048 characters (Sasha)

Bug fixes:
..F....... [ZBX-7260] fixed "Wrong RPC call to JS RPC" error when acknowledging trigger and changing group or host in screen element (Ivo)
..F....... [ZBX-6129] fixed changing the status of triggers and trigger prototype working incorrectly if they no longer exist (Pavels)
..F....... [ZBX-7266] fixed frontend big dropdowns displaying (Eduard)
..F....... [ZBX-7248] fixed frontend initial calendar time (Eduard)
.......PS. [ZBX-7208] fixed DB schema generation for "t_shorttext"-type fields (Andris, asaveljevs)
..F....... [ZBX-7240] fixed map editing form behaving incorrectly after it has been submitted unsuccessfully (Pavels)
A......... [ZBX-7256] fixed sorting by hostname in trigger.get (Pavels)
..F....... [ZBX-7247] fixed multiselect allowing to select read only objects in places where write permissions are required (Pavels)
A......... [ZBX-7247] fixed map.create and map.update not checking permissions to objects used in map elements (Pavels)
A.F....... [ZBX-7238] fixed network discovery rule permission checks for admin users (Pavels)
..F....... [ZBX-7251] corrected multiple page headers and other text strings (Pavels)
..F....... [ZBX-7212] fixed interface macros priorities (Eduard)
A.F....... [ZBX-7235] fixed activating and deactivating a web scenarios (Eduard)
..F....... [ZBX-7181] fixed frontend natural sorting (Eduard)
..F....... [ZBX-7236] removed the sorting indicator from the "Last 20 issues" widget (Pavels)
A......... [ZBX-7224] fixed host prototype children group deletion (Eduard)
..F....... [ZBX-7199] fixed permission issue in bar report (Eduard)